# comfyui-civitai-alchemist

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  civitai_routes.py  pyproject.toml
civitai_utils/: __init__.py  civitai_api.py  model_manager.py
docs/: DEVELOPMENT.md
docs/research/: 2026-01-31-comfyui-sidebar-extension.md
docs/specs/2026-01-31-sidebar-extension-phase1-2/: acceptance.feature  implementation.md  prd.md
docs/specs/2026-01-31-sidebar-extension-phase3-5/: implementation.md
js/: main.js
nodes/: __init__.py  civitai_browser.py  keyword_extractor.py  model_downloader.py  prompt_applier.py
pipeline/: debug.py  download_models.py  fetch_metadata.py  generate_workflow.py  reproduce.py  resolve_models.py  sampler_map.py
scripts/: benchmark.sh  check_env.sh  link.sh  run_comfyui.sh  setup.sh  unlink.sh
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/components/: ApiKeyWarning.vue  GenerationInfo.vue  ImageInput.vue  ModelCard.vue  ModelList.vue
ui/src/composables/: useCivitaiApi.ts
ui/src/types/: comfyui.d.ts  index.ts
utils/: civitai_api.py  model_manager.py
