[project]
name = "comfyui-civitai-alchemist"
description = "Reproduce Civitai images locally via ComfyUI"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
# CLI mode requires tqdm (progress bars) and python-dotenv (.env loading)
cli = [
    "tqdm",
    "python-dotenv",
]

[project.urls]
Repository = "https://gitlab.com/purefern5078/comfyui-civitai-alchemist"

[tool.comfy]
PublisherId = "ThePhilosopherStone"
DisplayName = "Civitai Alchemist"
Icon = ""
includes = ["js/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
